# cmusfm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  config.h.cmake  default.nix  flake.nix  shell.nix
.github/workflows/: build-and-test.yaml  code-scanning.yaml
doc/: CMakeLists.txt
src/: CMakeLists.txt  server.c
test/: CMakeLists.txt  test-cache.c  test-server-submit03.c
